fix css on mobile

--- a/site/index.css
+++ b/site/index.css
@@ -36,7 +36,7 @@ main {
 }
 
 main p {
-    width: 72ch;
+    max-width: 72ch;
     line-height: 1.5em;
 }
 
